# libtpms

./: .gitignore  .travis.yml  configure.ac
src/: Makefile.am  tpm_library.c  tpm_library_intern.h  tpm_tpm2_interface.c
src/tests/: tpm2_nvram_offsetchecks.c
src/tpm2/: AlgorithmCap.c  BnConvert.c  CommandAttributeData.h  Global.c  Global.h  GpMacros.h  HierarchyCommands.c  Implementation.h  Manufacture.c  NV.h  NVDynamic.c  NVMarshal.c  NVMarshal.h  PCR.c  PlatformData.h  StartupCommands.c  StateMarshal.c  TPMCmdp.c  Time.c  TpmBuildSwitches.h  TpmFail.c  TpmTypes.h  Unmarshal.c  Volatile.c
src/tpm2/crypto/openssl/: CryptEccSignature.c  TpmToOsslMath.c
tests/: Makefile.am  bitfield_test.c
